# DeviceIQ-Orchestrator-CLI

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  upd.sh  vcpkg.json
include/: CommandLineParser.h  Log.h  OrchestratorCLI.h  String.h  Tools.h  Version.h
src/: CommandLineParser.cpp  Log.cpp  OrchestratorCLI.cpp  String.cpp  Tools.cpp  main.cpp
